--- a/login.html
+++ b/login.html
@@ -10,13 +10,23 @@
 </head>
 <body>
     <div class="page">
+        <section class="acessibilidade">
+            <div>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                  </label>
+            </div>
+            <i id="idark" class="fa-solid fa-circle-half-stroke">&#xf042</i>
+            <i id="itt" class="fa-solid fa-text-size fa-beat">&#xf894</i>
+        </section>
         <form action="" method="POST" class="formLogin">
             <h1 id="login">Login</h1>
             <p>Digite os seus dados de acesso no campo abaixo.</p>
             <label for="email">E-mail:</label>
-            <input type="email" style="font-family: 'Font Awesome 5 Free'; font-weight: 700; name="email" placeholder="&#xf0e0 Digite seu e-mail" autofocus="true" />
+            <input type="email" style="font-family: 'Font Awesome 5 Free'; font-weight: 700;" name= 'email' placeholder="&#xf0e0 Digite seu e-mail" autofocus="true" />
             <label for="password">Senha:</label> 
-            <input type="password" style="font-family: 'Font Awesome 5 Free'; font-weight: 700; name="password" placeholder="&#xf084; Digite a senha"/>
+            <input type="password" style="font-family: 'Font Awesome 5 Free'; font-weight:700" 700; name='password' placeholder="&#xf023 Digite a senha"/>
             <a class="esqueci" href="/">Esqueci minha senha</a>
             <div class="remember">
             <label for="lembrar"> Lembrar de mim</label>
