--- a/login.html
+++ b/login.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/login.css" id="style">
 </head>
 <body>
     <div class="page">
         <section class="acessibilidade">
             <div>
                 <label class="switch">
-                    <input type="checkbox">
+                    <input type="checkbox" id="btn-mododark" onclick= "colorMode(this.value)">
                     <span class="slider round"></span>
                   </label>
             </div>
-            <i id="idark" class="fa-solid fa-circle-half-stroke">&#xf042</i>
+            <i id="idark" class="fa-solid fa-circle-half-stroke" >&#xf042</i>
             <i id="itt" class="fa-solid fa-text-size fa-beat">&#xf894</i>
         </section>
         <form action="" method="POST" class="formLogin">
@@ -37,6 +37,7 @@
             <label> Não é inscrito? </label>
             <a href="/"> Se inscreva aqui!</a>
             </div>
+            <script src="main.js"></script>
         </form>
     </div>
     
